Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub ) / Philipp Stracker / Marcin Pietrzak / Irene Mitchell / Jose Jaureguiberry / Ignacio Cruz

CHANGE LOG
=================================================

== Changelog ==

= 1.3.4.3 =
* Fixed: Problem with wrong units presentation on the reports page.

= 1.3.4.2 =
* Fixed: Problem preview draft unit.
* Fixed: Copy feature image from course to WooCommerce product.
* Fixed: Problem with units on units list page.
* Fixed: Missing div bracket in cp_popup_success_message template.
* Fixed: Paid course flag when we change MarketPress to WooCommerce.
* Fixed: Missing translation domain in Woo integration.
* Fixed: Wrong instructor id used by course_list shortcode.
* Fixed: Redirect from WooCommerce shop main page.
* Fixed: Problem with Virtual Pages when a site uses SSL.
* Fixed: Problem with answers with HTML entities.

= 1.3.4.1 =
* Fixed: Skip search filter if query post types are bbpress types

= 1.3.4 =
* Fixed: Empty text field by default when resubmitting an answer

= 1.3.3 =
* Fixed: Compatibility issues with WP 4.5.

= 1.3.2 =
* Fixed: Session completion data outdated when instructor grades an answer.

= 1.3.1 =
* Fixed: AJAX url was not properly generated in some cases (if only admin  is SSL)

= 1.3 =
* Fixed: Console error when opening course categories.
* Fixed: Console error when opening New Course in page settings.
* Fixed: Issues with invite instructor.
* Fixed: Quizz assessment wrong answer count.
* Fixed: Mandatory wrong answer count.
* Fixed: Broken Unit Page Template If a unit or one of the unit set to be available in the future.
* Fixed: course_instructors shortcode do not print the list of instructors if no parameters set.
* Fixed: get instructor by hash query was not returning anything
* Enhance: Performance improvements
* Enhance: Improved Session class so it's completely overridable
* Other minor fixes
* Some code reorganization

= 1.2.6.7 =