@@ -8,6 +8,7 @@ CHANGE LOG
 
 = 1.3.4.3 =
 * Fixed: Problem with wrong units presentation on the reports page.
+* Fixed: Problem with missing class in shortcode course_list.
 
 = 1.3.4.2 =
 * Fixed: Problem preview draft unit.
